--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.55",
     "@types/react": "^16.9.49",
+    "@types/react-bootstrap": "^0.32.22",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-bootstrap": "^0.24.5",
+    "@types/react-router-dom": "^5.1.5",
+    "aws-amplify": "^3.1.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^0.33.1",
     "react-dom": "^16.13.1",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "typescript": "^3.7.5"
   },
